--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_DSN=in-memory://
-REQUESTS_LIMIT_PER_INTERVAL=50
-REQUESTS_INTERVAL=1m
+DB_DSN=host=localhost user=postgres password=pass dbname=db port=5434 sslmode=disable
+REQUESTS_LIMIT_PER_INTERVAL=1m
+REQUESTS_INTERVAL=50
