--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_DSN=host=localhost user=postgres password=pass dbname=db port=5434 sslmode=disable
-REQUESTS_LIMIT_PER_INTERVAL=1m
-REQUESTS_INTERVAL=50
+RATE_LIMIT_REQUESTS_LIMIT_PER_INTERVAL=1m
+RATE_LIMIT_REQUESTS_INTERVAL=60
+QUEUE_INTERVAL_CHECKING_NEW_REQUESTS=1s
+QUEUE_WORKERS_SIZE=4
