--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_DSN=host=localhost user=postgres password=pass dbname=db port=5432 sslmode=disable
 RATE_LIMIT_REQUESTS_LIMIT_PER_INTERVAL=1m
 RATE_LIMIT_REQUESTS_INTERVAL=60
+RATE_LIMIT_STRATEGY=
 QUEUE_INTERVAL_CHECKING_NEW_REQUESTS=1s
 QUEUE_WORKERS_SIZE=4
