--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_DSN=host=localhost user=postgres password=pass dbname=db port=5432 sslmode=disable
+DB_DSN=in-memory://
 RATE_LIMIT_REQUESTS_LIMIT_PER_INTERVAL=1m
 RATE_LIMIT_REQUESTS_INTERVAL=60
 RATE_LIMIT_STRATEGY=realtime
