Reset idle tasks mechanism

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ RATE_LIMIT_REQUESTS_INTERVAL=60
 RATE_LIMIT_STRATEGY=realtime
 QUEUE_INTERVAL_CHECKING_NEW_REQUESTS=1s
 QUEUE_WORKERS_SIZE=4
+QUEUE_HEALTH_CHECK_INTERVAL=15s
